--- a/newGuo/address.html
+++ b/newGuo/address.html
@@ -13,7 +13,7 @@
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div class="bg-cover"></div>
+<!--<div class="bg-cover"></div>-->
 <!--head-->
 <div class="site-topbar">
     <div class="container">
@@ -223,16 +223,18 @@
 
         <!--购物车底部-->
         <ul class="table-content" style="margin-bottom: 30px;">
-            <li class="clear" style="width: 267px; text-align: right;float: right">
+            <li class="clear" style="width: 318px; text-align: right;float: right; position: relative; height: 135px;">
                 <div class="cart-total">
                     <div class="cart-total-one">应付总额：</div>
-                    <div class="cart-total-two">20000元</div>
+                    <div class="cart-total-two">2399.00元</div>
                 </div>
                 <div class="clear"></div>
 
-                <a href="pay.html" class="btn btn-red" style="float: right; width: 100px; margin-top:50px;">立即下单</a>
-                <a href="#" class="btn btn-valite" style=" margin-top:50px; float: right;height: 40px;line-height: 40px;margin-right: 10px;">返回购物车</a>
-            </li>
+                <div style="position: absolute; bottom: 0; right: 0;">
+                    <a href="pay.html" class="btn btn-red" style="float: right; width: 100px;">立即下单</a>
+                    <a href="#" class="btn btn-valite" style="  float: right;height: 40px;line-height: 40px;margin-right: 110px;">返回购物车</a>
+                </div>
+           </li>
 
         </ul>
         <!--购物车底部-->
