--- a/newGuo/band-story.html
+++ b/newGuo/band-story.html
@@ -5,12 +5,13 @@
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="品牌故事">
     <meta name="description" content="品牌故事">
-    <link href="global/styles/base.css" type="text/css" rel="stylesheet">
+    <!--<link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
+    <link href="global/styles/default.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="global/styles/font-awesome.min.css">
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
-    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <!--head-->
@@ -194,7 +195,7 @@
             </div>
             <div class="s-wenzhang">
                 <p>
-                    <b>更极致的考验——物流。</b>首先，由于酒是液体和易碎品，只能发陆运，陆运意味着漫长的周转时间，为了让你不用等太久，我们果断选择了价格偏贵、但速度更有保障的XX物流。其次，如果你在网上买过酒，一定会被那些简陋、粗暴的包装震惊到，如果运气不好，漏酒破损什么的更令人揪心。为了彻底改变白酒物流低劣、粗暴的消费体验，我们再一次豁出去了！——定制！根据每一款酒的不同大小，量身定做高硬度重型纸箱（比苹果电脑用的那种外纸箱还要厚、还要硬）。不，这还不够，为了确保安全，我们将破坏性测试进行到底，让公司里身高一米八、重约0.2吨的西北大汉踩上去……结果：毫无压力，完好无损。
+                    <b>更极致的考验——物流。</b>首先，由于酒是液体和易碎品，只能发陆运，陆运意味着漫长的周转时间，为了让你不用等太久，我们果断选择了价格偏贵、但速度更有保障的顺丰物流（顺丰不到的地方用EMS)。其次，如果你在网上买过酒，一定会被那些简陋、粗暴的包装震惊到，如果运气不好，漏酒破损什么的更令人揪心。为了彻底改变白酒物流低劣、粗暴的消费体验，我们再一次豁出去了！——定制！根据每一款酒的不同大小，量身定做高硬度重型纸箱（比苹果电脑用的那种外纸箱还要厚、还要硬）。不，这还不够，为了确保安全，我们将破坏性测试进行到底，让公司里身高一米八、重约0.2吨的西北大汉踩上去……结果：毫无压力，完好无损。
                 </p>
                 <p style="margin-top:50px;">
                     如上所述这些，只是整个庞大系统里面的几个环节。一瓶酒，从原粮、取水、制曲、发酵、摊晾、蒸馏、储藏、勾调……到包装、发货、物流、配送……最终到达你的手中，前前后后要经过可能不少于100道工序，辗转上百人之手，从此处到彼处，从嘴里，到心里。
