--- a/newGuo/cart.html
+++ b/newGuo/cart.html
@@ -230,14 +230,14 @@
 
        <!--购物车底部-->
        <ul class="table-content" style="margin-bottom: 30px;">
-           <li class="clear" style="width: 255px; text-align: right;float: right">
+           <li class="clear" style="width: 255px; text-align: right;float: right;position: relative;height: 135px;">
                <div class="cart-total" style="margin-left: -25px;">
                    <div class="cart-total-one">总计：</div>
                    <div class="cart-total-two">20000元</div>
                </div>
                <div class="clear"></div>
 
-               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; height: 45px; line-height: 45px; margin-top:110px; *+margin-top: 70px;">去结账</a>
+               <a href="address.html" class="btn btn-red" style=" width: 110px; height: 45px; line-height: 45px; *+margin-top: 70px; position: absolute; bottom:0; right: 0;">去结账</a>
            </li>
 
        </ul>
