--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -148,7 +148,7 @@
     <div class="header-nav" style="position: relative">
         <div style="position: absolute; top: 10px; left: 138px; font-size: 20px;">国馆中国道</div>
         <div class="purchase-content " style="margin-top: 8px; float: right">
-            <a class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;">立即购买</a>
+            <button class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;font-family: 'Microsoft Yahei';">立即购买</button>
         </div>
     </div>
 </div>
@@ -496,7 +496,7 @@
                 <div style="width:960px; margin: 0 auto; color: #000">
                     <div style="width: 500px;padding-top: 43px;margin-left: 475px;">
                         <p style="font-size: 23px; ">
-                            黄金比例，最佳手感。黄金比例，最佳手感。
+                            黄金比例，最佳手感。
                         </p>
                         <p style="font-size: 18px;">
                             收藏级的白酒，不仅可以喝，更要能拿在手里品鉴赏味。为了得到最好的把玩体验，我们不断调整酒瓶的粗细、高度，寻找美学和人体工学的黄金比例，直至最佳的握感、最愉悦的瓶型出现。
@@ -830,7 +830,7 @@
             </li>
         </ul>
         <div class="purchase-content " style="margin-top: 8px; float: right">
-            <a class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;">立即购买</a>
+            <button class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;font-family: 'Microsoft Yahei';">立即购买</button>
         </div>
     </div>
 </div>
