--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 
     <!--样式表-->
-  <!--  <link href="global/styles/base.css" type="text/css" rel="stylesheet">
+   <!-- <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
     <link href="global/styles/default.css" rel="stylesheet" type="text/css">
@@ -67,7 +67,7 @@
                             应用
                             <i class="icon-caret-down" style="color: #9c9c9c"></i>
                         </a>
-                        <ul>
+                        <ul style="display: none">
                             <li><a href="#" ><img src="global/images/icon-1.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>每日一文</span></a></li>
                             <li><a href="#" ><img src="global/images/icon-2.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆电台</span></a></li>
                             <li><a href="#" ><img src="global/images/icon-3.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆说文化</span></a>
@@ -129,12 +129,15 @@
                 </li>
             </ul>
 
-            <div class="left-angle">
-                <i class="icon-angle-left"></i>
+            <div class="index-angle">
+                <div class="left-angle">
+                    <i class="icon-angle-left"></i>
+                </div>
+                <div class="right-angle">
+                    <i class="icon-angle-right"></i>
+                </div>
             </div>
-            <div class="right-angle">
-                <i class="icon-angle-right"></i>
-            </div>
+
 
         </div>
 
