--- a/newGuo/register.html
+++ b/newGuo/register.html
@@ -136,6 +136,7 @@
                         手机号码错误
                         </span>
                     </div>
+                    <div style="clear: both;"></div>
                 </div>
                 <div class="login-input-area">
                     <input type="text" placeholder="&nbsp;常用邮箱" class="input-style width100">
@@ -146,8 +147,8 @@
                     </div>
                 </div>
                 <div class="login-input-area">
-                    <input type="password" placeholder="&nbsp;新的登录密码" class="input-style width100 password-psw"  style="display: none">
-                    <input type="text" placeholder="&nbsp;新的登录密码" class="input-style width100 password-text">
+                    <input type="password" placeholder="&nbsp;新的登录密码" id="password-psw" onblur="s2()" class="input-style width100 password-psw"  style="display: none">
+                    <input type="text" placeholder="&nbsp;新的登录密码" id="password-text"  onfocus="s1()" class="input-style width100 password-text">
                     <div class="error-tip-bg">
                         <span>
                         手机号码错误
@@ -270,6 +271,19 @@
 <script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
 <script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
 <script>
+    //密码placeholder处理
+    function s2(){
+        if(!$("#password-psw").val()){
+            $("#password-psw").css("display","none");
+            $("#password-text").css("display","block");
+        }
+    }
+    function s1(){
+        $("#password-text").css("display","none");
+        $("#password-psw").css("display","block");
+        $("#password-psw").focus();
+    }
+
     $(document).ready(function() {
         $('#idmenu').mnmenu();
 
@@ -328,8 +342,8 @@
         });
     });
 
-    //密码placeholder处理
-    $("input.password-text").focus(function(){
+
+    /*$("input.password-text").focus(function(){
         console.log(1111)
         $(this).css("display","none");
         $("input.password-psw").css("display","block");
@@ -340,7 +354,20 @@
             $(this).css("display","none");
             $("input.password-text").css("display","block");
         }
-    });
+    });*/
+  /* document.getElementById("password-text").focus(function(){
+        console.log(1111)
+       alert(111)
+        $(this).css("display","none");
+        $("input.password-psw").css("display","block");
+        $("input.password-psw").focus();
+    })
+    $("input.password-psw").focusout(function(){
+        if(!$(this).val()){
+            $(this).css("display","none");
+            $("input.password-text").css("display","block");
+        }
+    });*/
 
 </script>
 <script>
@@ -357,18 +384,7 @@
             'type'				: 'iframe'
         });
 
-        $("input.password-text").focus(function(){
-            console.log(1111)
-            $(this).css("display","none");
-            $("input.password-psw").css("display","block");
-            $("input.password-psw").focus();
-        })
-        $("input.password-psw").focusout(function(){
-            if(!$(this).val()){
-                $(this).css("display","none");
-                $("input.password-text").css("display","block");
-            }
-        });
+
     });
 </script>
 </html>
