--- a/father/four.html
+++ b/father/four.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>父亲节专题</title>
+    <title>「国馆•中国道」，最适合送父亲的礼物</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
     <meta name="description" content="国馆是中国收藏级文化白酒品牌，同时也是一个融国学、文化、艺术为一体的传播平台。 ">
@@ -21,7 +21,22 @@
 <div class="container-big banner-second">
 </div>
 
+
 <!--content-->
+<div class="container" style="margin-top: -300px;">
+    <div class="second-title">
+        「国馆•中国道」，最适合送父亲的礼物
+    </div>
+
+    <div class="second-title-content" style="margin-bottom: 280px;">
+        <h2>爱，要说出来！趁我们还青春年华，趁父亲仍笑靥如花！</h2>
+        <p>
+            2010年，一群知名书法艺术家、设计师和传统手工艺者开始思考这问题：对于那些生命中最宝贵的父亲，我们用什么样的中国风礼物，去表达我们内心的感恩？3年的求索，他们找到了答案。
+            <br><br>
+            我们需要一份父亲看得懂的礼物；我们需要一份实用的礼物；我们需要一份父亲能和每一个人炫耀自己孩子的礼物；我们需要一份他们收到之后，会像我们小时候收到玩具一样欣喜的礼物。它就是——「国馆•中国道」。
+        </p>
+    </div>
+</div>
 
 
 <!--footer-->
