--- a/father/one.html
+++ b/father/one.html
@@ -5,13 +5,25 @@
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
     <meta name="description" content="国馆是中国收藏级文化白酒品牌，同时也是一个融国学、文化、艺术为一体的传播平台。 ">
+    <link href="http://www.guoguan.com/public/front/guoguan/img/icon/144x144@2x.png" sizes="144x144" rel="apple-touch-icon-precomposed">
+    <link href="http://www.guoguan.com/public/front/guoguan/img/icon/114x114@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+    <link href="http://www.guoguan.com/public/front/guoguan/img/icon/72x72@2x.png" sizes="72x72" rel="apple-touch-icon-precomposed">
+    <link href="http://www.guoguan.com/public/front/guoguan/img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
+    <link href="http://www.guoguan.com/public/front/guoguan/img/icon/favicon.png" rel="shortcut icon">
     <link href="css/base.css" type="text/css" rel="stylesheet">
     <link href="css/layout.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<!--head-->
 <div class="container-big banner">
+    <img src="images/banner-title.png" style="position: absolute; right: 0; top: 60px;">
 </div>
-<div class="container">
+<div class="container-big banner-second">
+</div>
+
+
+<!--content-->
+<div class="container" style="margin-top: -300px;">
     <div class="second-title">
         <span>老爸</span>,的八大经典“谎言”
     </div>
@@ -23,8 +35,61 @@
         <p>
             家里不一定没事，爸爸只是不想让你担心。爸爸嘴上这么说，心底却无比盼望你。常回家看看，别让爱等得太久。
         </p>
-        <img src="images">
+        <img src="images/2_01.jpg" style="width: 658px">
     </div>
+    <div class="second-title-content">
+        <h2>谎言二：我不饿，等你回来再吃</h2>
+        <p>
+            不管多晚，老爸也要等你回来再吃。加班要提前告诉爸妈，不加班就尽量早点回。漂在外面的，不仅有你，还有爸爸的心。
+        </p>
+        <img src="images/2_02.jpg" style="width: 658px">
+    </div>
+    <div class="second-title-content">
+        <h2>谎言三：我不喝了，你喝吧</h2>
+        <p>
+            不管多晚，老爸也要等你回来再吃。加班要提前告诉爸妈，不加班就尽量早点回。漂在外面的，不仅有你，还有爸爸的心。
+        </p>
+        <img src="images/2_03.jpg" style="width: 658px">
+    </div>
+    <div class="second-title-content">
+        <h2>谎言四：我衣服够穿了，别给我买</h2>
+        <p>
+            老爸并不喜欢又旧又破的那几件衣服，他只是不想你为他花钱。你唯一要做的是记住老爸的身材，别买的不合身。
+        </p>
+        <img src="images/2_04.jpg">
+    </div>
+    <div class="second-title-content">
+        <h2>谎言五：我挺好的，不用操心我</h2>
+        <p>
+            都说老人越老越像小孩，孤独、寂寞、迷茫，有空多陪陪老爸，像老爸小时候带你出去玩一样。
+        </p>
+        <img src="images/2_05.jpg">
+    </div>
+    <div class="second-title-content">
+        <h2>谎言六：不要浪费钱，我不喜欢这个</h2>
+        <p>
+            既然老爸不喜欢，为什么看到这个这么开心，又有点不舍。爸爸才没你小时候那么厚脸皮“要不要这个？”， “要”。老爸喜欢的，只会默默装在心里。
+        </p>
+        <img src="images/2_06.jpg">
+    </div>
+    <div class="second-title-content">
+        <h2>谎言七：我用不着了，你留着用吧</h2>
+        <p>
+            如果不需要，又何必留到今天。爸爸把最珍贵的都传了给你，一定要好好珍惜，传给下一代，这就是传承。
+        </p>
+        <img src="images/2_07.jpg">
+    </div>
+    <div class="second-title-content" style="margin-bottom: 80px;">
+        <h2>谎言八：老毛病了，一会就自己好了</h2>
+        <p>
+            千万别信这句，老爸这么说一般是心疼钱或者怕麻烦。如果经常发作一定要去正规医院。记住，树欲静而风不止，子欲养而亲不待。
+        </p>
+        <img src="images/2_08.jpg">
+    </div>
+</div>
+
+<!--footer-->
+<div class="container-big footer">
 </div>
 </body>
 </html>
