--- a/newGuo/address.html
+++ b/newGuo/address.html
@@ -232,7 +232,7 @@
 
                 <div style="position: absolute; bottom: 0; right: 0;">
                     <a href="pay.html" class="btn btn-red" style="float: right; width: 100px;">立即下单</a>
-                    <a href="#" class="btn btn-valite" style="  float: right;height: 40px;line-height: 40px;margin-right: 110px;">返回购物车</a>
+                    <a href="#" class="btn btn-valite btn-valite-position" style="  float: right;height: 40px;line-height: 40px;margin-right: 110px;">返回购物车</a>
                 </div>
            </li>
 
