--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -127,6 +127,10 @@
                         <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position index-purchase-button" style="">立即购买</a>
                     </div>
                 </li>
+                <li style='display:none;'>
+                    <div class="index-banner-2" onclick="window.open('http://baidu.com')">
+                    </div>
+                </li>
             </ul>
 
             <div class="index-angle">
