--- a/newGuo/register.html
+++ b/newGuo/register.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="login-input-area">
                     <input type="text" placeholder="&nbsp;验证码" class="input-style valite-code">
-                    <a href="#" class="btn btn-valite">获取手机验证码</a>
+                    <a href="#" class="btn btn-valite btn-valite-position">获取手机验证码</a>
                     <div class="error-tip-bg">
                         <span>
                         手机号码错误
