--- a/father/index.html
+++ b/father/index.html
@@ -22,7 +22,96 @@
 </div>
 
 <!--content-->
+<div class="container" style="margin-top: -100px;">
+    <ul class="right-fixed">
+        <li class="right-fixed-one">
+            <a href="#">
+                <img src="images/1_02.png" alt="父亲节">
+            </a>
+        </li>
+        <li class="right-fixed-two">
+            <a href="#">
+                被忽视的节日
+            </a>
+        </li>
+        <li class="right-fixed-three">
+            <a href="#">
+                不得不说的故事
+            </a>
+        </li>
+        <li class="right-fixed-four">
+            <a href="#">
+                我长大了，你却老了
+            </a>
+        </li>
+        <li class="right-fixed-five">
+            <a href="#">
+                <img src="images/1_05.jpg" alt="中国道"/>
+            </a>
+        </li>
+    </ul>
+    <div class="avi-div"></div>
+    <div class="wenzhang">
+        <div class="second-title">
+            <span>
+                父亲节
+            </span>
+            ，一个被大多数人忽略的节日
+        </div>
+        <div class="second-title-detail">
+            父亲的角色很久以来赋予男性“坚强、独立”的标签，让子女也羞于表达这份感情。
+        </div>
+        <img src="images/1_02.jpg" style="width:300px; margin-right: 6px; margin-top:60px;">
+        <img src="images/1_03.jpg" style="width:300px; margin-right: 6px;margin-top:60px;">
+        <img src="images/1_04.jpg" style="width:300px;margin-top:60px;">
+        <p class="color-one" style="margin-top: 25px;">
+            2013年父亲节，曾被媒体戏称“最尴尬的父亲节”。淘宝网数据显示：2013年6月，平均每天仅有800多人次搜索“父亲”相关的礼物，这个“待遇”还不如母亲的1/8，情侣的1/20，和子女的1/30。对于父亲的爱，绝大多数人选择了沉默。
+        </p>
+        <p class="color-one">
+            同时，据相关机构调查显示：6成受访者不知道自己的父亲喜好。在“自己最爱的人”调查当中，父亲不及母亲、子女、自己及配偶，排到了第五。
+        </p>
+        <p class="color-one">父亲为了养家糊口难免终日奔波劳碌，担起家庭和社会的主要角色，但是这样的“主要角色”存在感反而低的惊人，在承受来自生活、工作和社会压力的同时，却得不到家庭成员的关注，如何拯救被冷落的“父亲节”，实在是个令人非常惆怅的课题。</p>
+        <img src="images/1_06.jpg" style="width: 960px;margin-top: 20px;" >
+    </div>
+    <div class="wenzhang-two">
+        <span>
+           父亲节被忽视的文化根源？
+        </span>
+        <p class="color-two " style="text-align: center">
+            同样是西方传来的节日，“情人节”、“圣诞节”风光无限，“父亲节”却是风轻云淡，果然不能泡妞的西方节日都很尴尬。国际公认的父亲节遇冷不说，就连中国传统父亲节也销声匿迹。是什么造成“父亲节”屡屡被忽视，中国的“父亲节”文化又是如何流失的？
+            <br><br/>
+            <a href="#" style="display: inline-block; margin: 0 auto; width: 130px; text-align: center">
+                详细内容&nbsp;>
+            </a>
+        </p>
+    </div>
+</div>
+<div class="container-big bg-two">
+    <div class="container">
+        <span>那些</span><br>
+        <div>
+            与父亲不得不说的故事
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: -350px;">
+    <div class="middle-left">
+        <p style="line-height: 29px; font-size: 16px; color: #313131;">
+            小时候，缠着爸爸讲故事，长大了，却开始嫌弃他的大道理。如今的我们，终于发现听爸爸的话也同样重要，而那些光阴的故事，是否还能一字不漏的被想起？
+        </p>
+        <div class="left-one">
+            <img src="images/1_07.jpg" alt=""/>
+        </div>
+        <div class="left-two">
+            <img src="images/1_08.jpg" alt=""/>
+        </div>
+    </div>
+    <div class="middle-right">
 
+    </div>
+
+    <div style="clear: both;"></div>
+</div>
 
 <!--footer-->
 <div class="container-big footer">
