--- a/newGuo/qore.html
+++ b/newGuo/qore.html
@@ -4,12 +4,10 @@
     <title></title>
     <meta name="viewport" charset="utf-8" content="width=1024">
 </head>
-<body style="overflow: hidden; height: 1000px">
-<div style="text-align: center; ">
-    <img src="images/qore-code.png" style="width: 200px; height: 200px; margin-left: -7px; margin-top: -7px">
-    <div style="line-height: 22px;
-color: #9c9c9c;
-font-size: 14px;">
+<body style="overflow: hidden; height: 1000px; margin: 0">
+<div style="text-align: center; background-color: #fff;">
+    <img src="images/qore-code.png" style="width: 200px; height: 200px;">
+    <div style="line-height: 22px; color: #9c9c9c; font-size: 14px; padding-bottom: 15px;">
         关注国馆酒微信号<br>
         全新微信购物体验
     </div>
