--- a/newGuo/youku.html
+++ b/newGuo/youku.html
@@ -4,16 +4,8 @@
     <title></title>
 </head>
 <body style="overflow: hidden; height: 100%">
-<div id="popup" style=" width: 900px; height: 520px; position: absolute;
-top: 50%;
-left: 50%;
-*+left:15%;
--webkit-transform: translate(-50%, -50%);
--moz-transform: translate(-50%, -50%);
--ms-transform: translate(-50%, -50%);
--o-transform: translate(-50%, -50%);
-transform: translate(-50%, -50%);">
-    <img src="images/delete_sign.png" width="30" height="30" style="position: absolute; top:0; right: 0; cursor: pointer" id="close">
+<div id="popup" style=" width: 860px; height: 484px;">
+   <!-- <img src="images/delete_sign.png" width="30" height="30" style="position: absolute; top:0; right: 0; cursor: pointer" id="close">-->
 
     <div id="youkuplayer" style="width:860px; height: 484px; margin-top: 40px;">
     </div>
