--- a/father/index.html
+++ b/father/index.html
@@ -30,17 +30,17 @@
             </a>
         </li>
         <li class="right-fixed-two">
-            <a href="#">
+            <a href="#href-one">
                 被忽视的节日
             </a>
         </li>
         <li class="right-fixed-three">
-            <a href="#">
+            <a href="#href-two">
                 不得不说的故事
             </a>
         </li>
         <li class="right-fixed-four">
-            <a href="#">
+            <a href="#href-three">
                 我长大了，你却老了
             </a>
         </li>
@@ -51,7 +51,7 @@
         </li>
     </ul>
     <div class="avi-div"></div>
-    <div class="wenzhang">
+    <div class="wenzhang" id="href-one">
         <div class="second-title">
             <span>
                 父亲节
@@ -80,14 +80,14 @@
         <p class="color-two " style="text-align: center">
             同样是西方传来的节日，“情人节”、“圣诞节”风光无限，“父亲节”却是风轻云淡，果然不能泡妞的西方节日都很尴尬。国际公认的父亲节遇冷不说，就连中国传统父亲节也销声匿迹。是什么造成“父亲节”屡屡被忽视，中国的“父亲节”文化又是如何流失的？
             <br><br/>
-            <a href="#" style="display: inline-block; margin: 0 auto; width: 130px; text-align: center">
+            <a href="#" style="color: #707070;;display: inline-block; margin: 0 auto; width: 130px; text-align: center">
                 详细内容&nbsp;>
             </a>
         </p>
     </div>
 </div>
 <div class="container-big bg-two">
-    <div class="container">
+    <div class="container" id="href-two">
         <span>那些</span><br>
         <div>
             与父亲不得不说的故事
@@ -101,16 +101,136 @@
         </p>
         <div class="left-one">
             <img src="images/1_07.jpg" alt=""/>
+            <div style="padding:10px;">
+                <div style=" font-size: 14px; line-height: 24px; color: #666666;">
+                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; margin-top: 15px; width: 50px;">
+                        父
+                    </span>
+                    亲是平凡的，但是他在我们的心中活出了伟大。也许我们从未用语言向他表达过什么，但是爱就在心中，突然想起了那句歌词：“时光时光慢些吧，不要再让你变老了……”
+                </div>
+            </div>
+            <div>
+                <a href="#" style="float: right; color: #000099">
+                    详细内容&nbsp;>
+                </a>
+            </div>
+
         </div>
         <div class="left-two">
             <img src="images/1_08.jpg" alt=""/>
+            <div style="padding:10px;">
+                <div style=" font-size: 14px; line-height: 24px; color: #666666;">
+                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; margin-top: 15px; width: 50px;">
+                        关
+                    </span>
+                    于为人处世、关于人生、关于爱……每一个父亲都有太多话要讲。在儿女面前，每个父亲心里都住着一个话痨。古今中外，很多知名或不知名的父亲都留下不少对儿女们说的话。来看看那些“话痨”父亲们都说了些什么吧。
+                </div>
+            </div>
+            <div>
+                <a href="#" style="float: right; color: #000099">
+                    详细内容&nbsp;>
+                </a>
+            </div>
         </div>
     </div>
     <div class="middle-right">
-
+        <div class="right-one">
+            <img src="images/1_03.png" alt="" style="padding-top: 29px;">
+            <p style="font-size: 14px; text-align: left; color: #535353; padding-left: 21px; padding-right: 21px; line-height: 22px; margin-top: 7px; ">
+                网友们总结的爸爸常说的这些口头禅，你的老爸有木有对你说过呢？
+            </p>
+        </div>
+        <div class="right-two">
+            <img src="images/1_05.png">
+        </div>
     </div>
 
     <div style="clear: both;"></div>
+</div>
+<div class="container-big bg-three">
+    <div class="container">
+        <div style="text-align: center; padding-top: 230px; padding-left: 450px;">
+            <img src="images/1_04.png" id="href-three">
+            <p style="font-size: 16px; color: #7d7d7d; width: 356px; margin:20px auto; line-height: 29px; text-align: center">
+                我离家远了，懂事多了，工作忙了，联络少了。
+                你头发白了，走得慢了，思念长了，话却少了。
+                我讨厌长大，因为，它让你变老了。
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: -430px;">
+    <div style="margin: 20px;">
+        <div style="width: 450px; float: left; margin-right: 20px;">
+            <img src="images/1_09.jpg" style="width: 190px; float: left" alt=""/>
+            <div style="float: left; margin-left: 10px; margin-top: 10px;">
+                <h3 style="font-size: 14px;">
+                    长大了才懂，老爸的八大经典“谎言”
+                </h3>
+                <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 24px;">
+                    老爸为什么要对你撒谎？蹩脚的谎言背后又有怎样的真情。傻孩子，你懂的太迟，教你识破老爸的谎言。
+                </p>
+                <a href="one.html" target="_blank"  style="color: #959595; float: right">
+                    详细内容&nbsp;>
+                </a>
+            </div>
+        </div>
+
+        <div style="width: 450px; float: left">
+            <img src="images/1_10.jpg" style="width: 190px; float: left" alt=""/>
+            <div style="float: left; margin-left: 10px; margin-top: 10px; width: 250px;">
+                <h3 style="font-size: 14px;">
+                    最残酷的数学题，我们还能见到爸妈多少次？
+                </h3>
+                <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
+                    如果你与父母不在一个城市，每年回家2次，一次在家待5天，如果按照平均寿命80岁计算你父母健在的年龄，计算一下你与父母还能在一起多久？我算了一下，突然发现：这是我上学到现在，遇到的最残酷的数学题。
+                </p>
+                <a href="two.html" target="_blank"  style="color: #959595; float: right;margin-top: -31px;">
+                    详细内容&nbsp;>
+                </a>
+            </div>
+        </div>
+
+        <div style="width: 450px; float: left; margin-top: 20px; margin-right: 20px;">
+            <img src="images/1_11.jpg" style="width: 190px; float: left" alt=""/>
+            <div style="float: left; margin-left: 10px; margin-top: 10px; width: 250px;">
+                <h3 style="font-size: 14px;">
+                    是时候，送父亲一份好礼
+                </h3>
+                <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
+                    父亲节给羞于表达情感的中国人一个好机会，名正言顺的送老爸一份礼物。虽然礼物不能说话，但礼物可以传话，让老爸感到我们的爱，让老爸听到我们说不出口的“老爸！我爱你！”
+                </p>
+                <a href="three.html" target="_blank"  style="color: #959595; float: right;margin-top: -3px;">
+                    详细内容&nbsp;>
+                </a>
+            </div>
+        </div>
+
+        <div style="width: 450px; float: left; margin-top: 20px;">
+            <img src="images/1_12.jpg" style="width: 190px; float: left" alt=""/>
+            <div style="float: left; margin-left: 10px; margin-top: 10px; width: 250px;">
+                <h3 style="font-size: 14px;">
+                    「国馆·中国道」，最适合送父亲的礼物
+                </h3>
+                <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
+                    对于如山的父爱，我们该怎么去表达？爱最怕的不是不知道如何表达，而是想表达的时候对方已经不在。回顾上文的亲情计算题，我们此生还能见父亲几次？能表达爱的机会还有多少？
+                </p>
+                <a href="four.html" target="_blank" style="color: #959595; float: right;margin-top: -3px;">
+                    详细内容&nbsp;>
+                </a>
+            </div>
+        </div>
+
+        <div style="clear: both"></div>
+    </div>
+</div>
+<div class="container" style="margin-top: 150px; z-index: 10">
+    <div class="avi-div"></div>
+</div>
+<div class="container-big bg-four" style="margin-top: -300px">
+</div>
+<div class="container " style="margin-bottom: 50px;">
+    <div class="sina-weibo"></div>
 </div>
 
 <!--footer-->
