父亲节专题

--- a/father/four.html
+++ b/father/four.html
@@ -16,7 +16,9 @@
 <body>
 <!--head-->
 <div class="container-big banner">
-    <img src="images/banner-title.png" style="position: absolute; right: 0; top: 60px;">
+    <div class="container">
+        <img src="images/banner-title.png" style="position: absolute; right: 0; top: 60px;">
+    </div>
 </div>
 <div class="container-big banner-second">
 </div>
@@ -40,7 +42,7 @@
 
 
 <!--footer-->
-<div class="container-big footer">
+<div class="container-big footer" onclick="window.open('http://www.guoguan.com/zhongguodao/')">
 </div>
 </body>
 </html>
