--- a/father/index.html
+++ b/father/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
     <title>父亲节专题</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
@@ -12,45 +12,26 @@
     <link href="http://www.guoguan.com/public/front/guoguan/img/icon/favicon.png" rel="shortcut icon">
     <link href="css/base.css" type="text/css" rel="stylesheet">
     <link href="css/layout.css" type="text/css" rel="stylesheet">
+
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <!--head-->
 <div class="container-big banner">
-    <img src="images/banner-title.png" style="position: absolute; right: 0; top: 60px;">
+    <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a></div>
+    <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{},"image":{"viewList":["tsina","weixin","qzone","tqq","renren"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["tsina","weixin","qzone","tqq","renren"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+    <div class="container">
+        <img src="images/banner-title.png" style="position: absolute; right: 0; top: 60px;">
+    </div>
 </div>
 <div class="container-big banner-second">
 </div>
 
 <!--content-->
-<div class="container" style="margin-top: -100px;">
-    <ul class="right-fixed">
-        <li class="right-fixed-one">
-            <a href="#">
-                <img src="images/1_02.png" alt="父亲节">
-            </a>
-        </li>
-        <li class="right-fixed-two">
-            <a href="#href-one">
-                被忽视的节日
-            </a>
-        </li>
-        <li class="right-fixed-three">
-            <a href="#href-two">
-                不得不说的故事
-            </a>
-        </li>
-        <li class="right-fixed-four">
-            <a href="#href-three">
-                我长大了，你却老了
-            </a>
-        </li>
-        <li class="right-fixed-five">
-            <a href="#">
-                <img src="images/1_05.jpg" alt="中国道"/>
-            </a>
-        </li>
-    </ul>
+<div class="container" style="margin-top: -300px;">
+
     <div class="avi-div"></div>
+
     <div class="wenzhang" id="href-one">
         <div class="second-title">
             <span>
@@ -80,7 +61,7 @@
         <p class="color-two " style="text-align: center">
             同样是西方传来的节日，“情人节”、“圣诞节”风光无限，“父亲节”却是风轻云淡，果然不能泡妞的西方节日都很尴尬。国际公认的父亲节遇冷不说，就连中国传统父亲节也销声匿迹。是什么造成“父亲节”屡屡被忽视，中国的“父亲节”文化又是如何流失的？
             <br><br/>
-            <a href="#" style="color: #707070;;display: inline-block; margin: 0 auto; width: 130px; text-align: center">
+            <a href="#" class="more-detail"  style="display: inline-block; margin: 0 auto; width: 130px; text-align: center">
                 详细内容&nbsp;>
             </a>
         </p>
@@ -94,7 +75,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: -350px;">
+<div class="container" style="margin-top: -550px;">
     <div class="middle-left">
         <p style="line-height: 29px; font-size: 16px; color: #313131;">
             小时候，缠着爸爸讲故事，长大了，却开始嫌弃他的大道理。如今的我们，终于发现听爸爸的话也同样重要，而那些光阴的故事，是否还能一字不漏的被想起？
@@ -103,14 +84,14 @@
             <img src="images/1_07.jpg" alt=""/>
             <div style="padding:10px;">
                 <div style=" font-size: 14px; line-height: 24px; color: #666666;">
-                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; margin-top: 15px; width: 50px;">
+                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; height: 48px; line-height: 48px; width: 50px;">
                         父
                     </span>
                     亲是平凡的，但是他在我们的心中活出了伟大。也许我们从未用语言向他表达过什么，但是爱就在心中，突然想起了那句歌词：“时光时光慢些吧，不要再让你变老了……”
                 </div>
             </div>
             <div>
-                <a href="#" style="float: right; color: #000099">
+                <a href="#" class="more-detail"  style="float: right;margin-top: 24px;">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -120,14 +101,14 @@
             <img src="images/1_08.jpg" alt=""/>
             <div style="padding:10px;">
                 <div style=" font-size: 14px; line-height: 24px; color: #666666;">
-                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; margin-top: 15px; width: 50px;">
+                    <span style="font-size: 40px; float: left; display: inline-block; color: #666666; height: 48px; line-height: 48px; width: 50px;">
                         关
                     </span>
                     于为人处世、关于人生、关于爱……每一个父亲都有太多话要讲。在儿女面前，每个父亲心里都住着一个话痨。古今中外，很多知名或不知名的父亲都留下不少对儿女们说的话。来看看那些“话痨”父亲们都说了些什么吧。
                 </div>
             </div>
             <div>
-                <a href="#" style="float: right; color: #000099">
+                <a href="#" class="more-detail" style="float: right; ">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -149,7 +130,7 @@
 </div>
 <div class="container-big bg-three">
     <div class="container">
-        <div style="text-align: center; padding-top: 230px; padding-left: 450px;">
+        <div style="text-align: center; position: absolute; right: 85px; top: 200px;">
             <img src="images/1_04.png" id="href-three">
             <p style="font-size: 16px; color: #7d7d7d; width: 356px; margin:20px auto; line-height: 29px; text-align: center">
                 我离家远了，懂事多了，工作忙了，联络少了。
@@ -170,7 +151,7 @@
                 <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 24px;">
                     老爸为什么要对你撒谎？蹩脚的谎言背后又有怎样的真情。傻孩子，你懂的太迟，教你识破老爸的谎言。
                 </p>
-                <a href="one.html" target="_blank"  style="color: #959595; float: right">
+                <a href="one.html" target="_blank" class="more-detail"  style=" float: right; margin-top: 17px;">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -185,7 +166,7 @@
                 <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
                     如果你与父母不在一个城市，每年回家2次，一次在家待5天，如果按照平均寿命80岁计算你父母健在的年龄，计算一下你与父母还能在一起多久？我算了一下，突然发现：这是我上学到现在，遇到的最残酷的数学题。
                 </p>
-                <a href="two.html" target="_blank"  style="color: #959595; float: right;margin-top: -31px;">
+                <a href="two.html" target="_blank" class="more-detail"   style="float: right;margin-top: -31px;">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -200,7 +181,7 @@
                 <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
                     父亲节给羞于表达情感的中国人一个好机会，名正言顺的送老爸一份礼物。虽然礼物不能说话，但礼物可以传话，让老爸感到我们的爱，让老爸听到我们说不出口的“老爸！我爱你！”
                 </p>
-                <a href="three.html" target="_blank"  style="color: #959595; float: right;margin-top: -3px;">
+                <a href="three.html" target="_blank" class="more-detail"   style="float: right;margin-top: -3px;">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -215,7 +196,7 @@
                 <p style="color: #959595; width: 250px; margin-top: 10px; font-size: 13px; line-height: 17px;">
                     对于如山的父爱，我们该怎么去表达？爱最怕的不是不知道如何表达，而是想表达的时候对方已经不在。回顾上文的亲情计算题，我们此生还能见父亲几次？能表达爱的机会还有多少？
                 </p>
-                <a href="four.html" target="_blank" style="color: #959595; float: right;margin-top: -3px;">
+                <a href="four.html" target="_blank" class="more-detail"  style="float: right;margin-top: -3px;">
                     详细内容&nbsp;>
                 </a>
             </div>
@@ -224,17 +205,47 @@
         <div style="clear: both"></div>
     </div>
 </div>
-<div class="container" style="margin-top: 150px; z-index: 10">
+<div class="container" style="margin-top: 70px; z-index: 10">
     <div class="avi-div"></div>
 </div>
-<div class="container-big bg-four" style="margin-top: -300px">
+<div class="container-big bg-four" style="margin-top: -360px">
 </div>
-<div class="container " style="margin-bottom: 50px;">
-    <div class="sina-weibo"></div>
+<div class="container " style="margin-bottom: 50px; margin-top: -300px;">
+    <div class="sina-weibo">
+    <wb:topic topmid="z8ClGsZa8" column="n" border="n" width="960" height="800" tags="%E7%88%B6%E4%BA%B2%E8%8A%82" language="zh_cn" version="base" footbar="y" filter="n" ></wb:topic>
+    </div>
 </div>
 
 <!--footer-->
-<div class="container-big footer">
+<div class="container-big footer" onclick="window.open('http://www.guoguan.com/zhongguodao/')">
 </div>
+
+<ul class="right-fixed">
+    <li class="right-fixed-one">
+        <a href="#">
+            <img src="images/1_02.png" alt="父亲节">
+        </a>
+    </li>
+    <li class="right-fixed-two">
+        <a href="#href-one">
+            被忽视的节日
+        </a>
+    </li>
+    <li class="right-fixed-three">
+        <a href="#href-two">
+            不得不说的故事
+        </a>
+    </li>
+    <li class="right-fixed-four">
+        <a href="#href-three">
+            我长大了，你却老了
+        </a>
+    </li>
+    <li class="right-fixed-five">
+        <a href="http://www.guoguan.com/zhongguodao/" target="_blank">
+            <img src="images/1_05.jpg" alt="中国道"/>
+        </a>
+    </li>
+</ul>
 </body>
 </html>
