--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 
     <!--样式表-->
-   <!-- <link href="global/styles/base.css" type="text/css" rel="stylesheet">
+    <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
-    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
-    <link href="global/styles/default.css" rel="stylesheet" type="text/css">
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
+<!--    <link href="global/styles/default.css" rel="stylesheet" type="text/css">-->
 </head>
 <body>
 <div>
@@ -22,6 +22,8 @@
     <div class="site-topbar">
         <div class="container">
             <div class="topbar-info ">
+                <a href="#" target="_blank">客服：400-900-5000</a>
+                <span class="sep"></span>
                 <a href="#" target="_blank">登录</a>&nbsp;/&nbsp;<a href="#" target="_blank">注册</a>
                 <span class="sep"></span>
                 <a href="#" target="_blank"><i class="icon-file-alt" style="margin-right: 3px"></i>我的订单</a>
@@ -456,6 +458,34 @@
         </div>
     </div>
     <!--footer end-->
+
+
+    <ul class="right-fixed">
+        <li class="right-fixed-one">
+            <a href="#">
+                <img src="images/QQ_grey.png" alt="" class="right-fixed-img" />
+                <p class="right-fixed-color">
+                    在线客服
+                </p>
+            </a>
+        </li>
+        <li class="right-fixed-two">
+            <a href="qore.html" class="qore-code">
+                <img src="images/wx_grey.png" alt="" class="right-fixed-img" />
+                <p class="right-fixed-color">
+                    加我微信
+                </p>
+            </a>
+        </li>
+        <li class="right-fixed-three">
+            <a href="#">
+                <img src="images/angle-up-grey.png" alt="" class="right-fixed-img" />
+                <p class="right-fixed-color">
+                    返回顶部
+                </p>
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
@@ -488,12 +518,25 @@
             $(this).find("img").attr("src","global/images/sf_logo_gray_bg.png");
         });
 
+        /*右侧固定图标点亮*/
+        $(".right-fixed li.right-fixed-one").hover(function(){
+            $(this).find("img").attr("src","images/QQ.png");
+        },function(){
+            $(this).find("img").attr("src","images/QQ_grey.png");
+        });
+        $(".right-fixed li.right-fixed-two").hover(function(){
+            $(this).find("img").attr("src","images/wx.png");
+        },function(){
+            $(this).find("img").attr("src","images/wx_grey.png");
+        });
+
         /*hover红条出现*/
         $(".model-little").hover(function(){
             $(this).find(".model-bottom").css("background-color","rgba(195,56,41,1)");
         },function(){
             $(this).find(".model-bottom").css("background-color","rgba(0,0,0,0.3)");
         });
+
 
         /*图片点亮*/
         $(".model-two-little").hover(function(){
