--- a/weixinApp/appmodel/index.html
+++ b/weixinApp/appmodel/index.html
@@ -111,130 +111,134 @@
 <body>
 <div id="jqt" class="">
 
-<div id="home" class="current">
-    <div class="home-banner">
-        <img src="themes/images/zhongguodao.jpg">
-    </div>
-    <div class="home-title">
-        <h1>
-            你的失败值是多少？
-        </h1>
-        <p>
-            王八将相宁有种笠？来测测你在前世是英雄，还是狗熊，是男人，还是女人，是官宦，还是宦官？
-        </p>
-    </div>
-    <div class="scroll">
-        <form class="scroll">
-            <ul class="edit rounded">
-                <li><input type="number" pattern="[0-9]*" name="number" placeholder="请输入手机号码" id="some_name"></li>
-            </ul>
-        </form>
-        <a href="#item-one" class="redButton">开始测试</a>
-    </div>
-    <div class="info">
-        <p>已有333333人参加测试<br>测试提供：国馆，中国收藏级文化白酒</p>
-    </div>
-</div>
-<div id="item-one">
-    <div class="toolbar">
-        <h1>第一题</h1>
-        <a href="#" class="back">返回</a>
-    </div>
-    <div class="item-title">
-        <h1>
-            你的失败值是多少？
-        </h1>
-        <p>
-            国馆提醒你：请在三秒以内回答以下问题，结果才会准确
-        </p>
-        <div class="logo">
-            <img src="themes/img/logo.jpg">
+    <div id="home" class="current">
+        <div class="home-banner">
+            <img src="themes/images/zhongguodao.jpg">
         </div>
-    </div>
-    <!--进度条-->
-    <div class="process">
-        <div class="number">
-            1/10
-        </div>
-        <div class="cent">
+        <div class="home-title">
+            <h1>
+                你的失败值是多少？
+            </h1>
             <p>
-            <div class="Bars">
-                <div style="width: 10%;">
-                </div>
-            </div>
+                王八将相宁有种笠？来测测你在前世是英雄，还是狗熊，是男人，还是女人，是官宦，还是宦官？
             </p>
         </div>
+        <div class="scroll">
+            <form class="scroll">
+                <ul class="edit rounded">
+                    <li><input type="number" pattern="[0-9]*" name="number" placeholder="请输入手机号码" id="some_name"></li>
+                </ul>
+            </form>
+            <a href="#item-one" class="redButton">开始测试</a>
+        </div>
+        <div class="info">
+            <p>已有333333人参加测试<br>测试提供：国馆，中国收藏级文化白酒</p>
+        </div>
     </div>
-    <!--题目标题-->
-    <div class="second-title">
-        <h3>
-            你愿意以何种身份穿越回古代？
-        </h3>
-    </div>
-    <!--以上都一样-->
 
-    <ul class="rounded scroll">
-        <li class="arrow"><a href="#item-two">你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理</a> </li>
-        <li class="arrow"><a href="#item-two">你心理</a></li>
-        <li class="arrow"><a href="#item-two">你心理</a></li>
-        <li class="arrow"><a href="#item-two">你心理</a></li>
-    </ul>
-    <div class="info">
-        <p>测试提供：国馆，中国收藏级文化白酒</p>
-    </div>
-</div>
-<div id="item-two">
-    <div class="toolbar">
-        <h1>第二题</h1>
-        <a class="back" href="#">上一题</a>
-    </div>
-    <div class="item-title">
-        <h1>
-            你的失败值是多少？
-        </h1>
-        <p>
-            国馆提醒你：请在三秒以内回答以下问题，结果才会准确
-        </p>
-        <div class="logo">
-            <img src="themes/img/logo.jpg">
+
+    <div id="item-one">
+        <div class="toolbar">
+            <h1>第一题</h1>
+            <a href="#" class="back">返回</a>
         </div>
-    </div>
-    <!--进度条-->
-    <div class="process">
-        <div class="number">
-            2/10
-        </div>
-        <div class="cent">
+        <div class="item-title">
+            <h1>
+                你的失败值是多少？
+            </h1>
             <p>
-            <div class="Bars">
-                <div style="width: 20%;">
-                </div>
-            </div>
+                国馆提醒你：请在三秒以内回答以下问题，结果才会准确
             </p>
+            <div class="logo">
+                <img src="themes/img/logo.jpg">
+            </div>
+        </div>
+        <!--进度条-->
+        <div class="process">
+            <div class="number">
+                1/10
+            </div>
+            <div class="cent">
+                <p>
+                <div class="Bars">
+                    <div style="width: 10%;">
+                    </div>
+                </div>
+                </p>
+            </div>
+        </div>
+        <!--题目标题-->
+        <div class="second-title">
+            <h3>
+                你愿意以何种身份穿越回古代？
+            </h3>
+        </div>
+        <!--以上都一样-->
+
+        <ul class="rounded scroll">
+            <li class="arrow"><a href="#item-two">你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理</a> </li>
+            <li class="arrow"><a href="#item-two">你心理</a></li>
+            <li class="arrow"><a href="#item-two">你心理</a></li>
+            <li class="arrow"><a href="#item-two">你心理</a></li>
+        </ul>
+        <div class="info">
+            <p>测试提供：国馆，中国收藏级文化白酒</p>
         </div>
     </div>
-    <!--题目标题-->
-    <div class="second-title">
-        <h3>
-            傻逼猜猜这是什么 0.0？
-        </h3>
-    </div>
-    <!--以上都一样-->
 
-    <div class="has-img">
-        <img src="themes/images/zhongguodao.jpg">
+    <div id="item-two">
+        <div class="toolbar">
+            <h1>第二题</h1>
+            <a class="back" href="#">上一题</a>
+        </div>
+        <div class="item-title">
+            <h1>
+                你的失败值是多少？
+            </h1>
+            <p>
+                国馆提醒你：请在三秒以内回答以下问题，结果才会准确
+            </p>
+            <div class="logo">
+                <img src="themes/img/logo.jpg">
+            </div>
+        </div>
+        <!--进度条-->
+        <div class="process">
+            <div class="number">
+                2/10
+            </div>
+            <div class="cent">
+                <p>
+                <div class="Bars">
+                    <div style="width: 20%;">
+                    </div>
+                </div>
+                </p>
+            </div>
+        </div>
+        <!--题目标题-->
+        <div class="second-title">
+            <h3>
+                猜猜这是什么 0.0？
+            </h3>
+        </div>
+        <!--以上都一样-->
+
+        <div class="has-img">
+            <img src="themes/images/zhongguodao.jpg">
+        </div>
+
+        <ul class="rounded scroll ">
+            <li class="arrow"><a href="#item-three">你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理</a> </li>
+            <li class="arrow"><a href="#item-three">你心理</a></li>
+            <li class="arrow"><a href="#item-three">你心理</a></li>
+            <li class="arrow"><a href="#item-three">你心理</a></li>
+        </ul>
+        <div class="info">
+            <p>测试提供：国馆，中国收藏级文化白酒</p>
+        </div>
     </div>
 
-    <ul class="rounded scroll ">
-        <li class="arrow"><a href="#item-three">你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理</a> </li>
-        <li class="arrow"><a href="#item-three">你心理</a></li>
-        <li class="arrow"><a href="#item-three">你心理</a></li>
-        <li class="arrow"><a href="#item-three">你心理</a></li>
-    </ul>
-    <div class="info">
-        <p>测试提供：国馆，中国收藏级文化白酒</p>
-    </div>
-</div>
     <div id="item-three">
         <div class="toolbar">
             <h1>第三题</h1>
@@ -268,22 +272,83 @@
         <!--题目标题-->
         <div class="second-title">
             <h3>
-                傻逼猜猜这是什么 0.0？
+                猜猜这是什么 0.0？
             </h3>
         </div>
         <!--以上都一样-->
 
         <ul class="metal scroll ">
-            <li class="arrow"><a href="#item-one">你心理你心理你心理你心理你心理你心理你心理你心理你心理你心理</a> </li>
-            <li class="arrow"><a href="#item-one">你心理</a></li>
-            <li class="arrow"><a href="#item-one">你心理</a></li>
-            <li class="arrow"><a href="#item-one">你心理</a></li>
+            <li class="arrow">
+                <img src="themes/images/2_01.jpg">
+                <a href="#show-result">美酒</a>
+            </li>
+            <li class="arrow">
+                <img src="themes/images/2_02.jpg">
+                <a href="#show-result">美酒</a>
+            </li>
+            <li class="arrow">
+                <img src="themes/images/2_03.jpg">
+                <a href="#show-result">美酒</a>
+            </li>
+            <li class="arrow">
+                <img src="themes/images/2_04.jpg">
+                <a href="#show-result">美酒</a>
+            </li>
         </ul>
         <div class="info">
             <p>测试提供：国馆，中国收藏级文化白酒</p>
         </div>
     </div>
 
+    <div id="show-result">
+        <div class="toolbar">
+            <h1>想看结果吗？</h1>
+            <a class="back" href="#">上一题</a>
+        </div>
+        <div class="item-title">
+            <h1>
+                你的失败值是多少？
+            </h1>
+            <p>
+                国馆提醒你：请在三秒以内回答以下问题，结果才会准确
+            </p>
+            <div class="logo">
+                <img src="themes/img/logo.jpg">
+            </div>
+        </div>
+        <!--进度条-->
+        <div class="process">
+            <div class="number">
+                10/10
+            </div>
+            <div class="cent">
+                <p>
+                <div class="Bars">
+                    <div style="width: 100%;">
+                    </div>
+                </div>
+                </p>
+            </div>
+        </div>
+        <!--以上都一样-->
+
+        <div class="detail-result">
+           <h3>
+               你的测试结果
+           </h3>
+            <h1>
+                析出八万项雨
+            </h1>
+        </div>
+
+        <div class="scroll">
+            <a href="#item-one" class="redButton" style="margin-bottom: 100px;">查看详细分析</a>
+        </div>
+
+        <div class="info">
+            <p>测试提供：国馆，中国收藏级文化白酒</p>
+        </div>
+    </div>
 </div>
 </body>
 <script>
